; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/isci/extr_port.c_sci_port_enable_port_task_scheduler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/isci/extr_port.c_sci_port_enable_port_task_scheduler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isci_port = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@ENABLE = common dso_local global i32 0, align 4
@SUSPEND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.isci_port*)* @sci_port_enable_port_task_scheduler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sci_port_enable_port_task_scheduler(%struct.isci_port* %0) #0 {
  %2 = alloca %struct.isci_port*, align 8
  %3 = alloca i32, align 4
  store %struct.isci_port* %0, %struct.isci_port** %2, align 8
  %4 = load %struct.isci_port*, %struct.isci_port** %2, align 8
  %5 = getelementptr inbounds %struct.isci_port, %struct.isci_port* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = call i32 @readl(i32* %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* @ENABLE, align 4
  %10 = call i32 @SCU_PTSxCR_GEN_BIT(i32 %9)
  %11 = load i32, i32* @SUSPEND, align 4
  %12 = call i32 @SCU_PTSxCR_GEN_BIT(i32 %11)
  %13 = or i32 %10, %12
  %14 = load i32, i32* %3, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = load %struct.isci_port*, %struct.isci_port** %2, align 8
  %18 = getelementptr inbounds %struct.isci_port, %struct.isci_port* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = call i32 @writel(i32 %16, i32* %20)
  ret void
}

declare dso_local i32 @readl(i32*) #1

declare dso_local i32 @SCU_PTSxCR_GEN_BIT(i32) #1

declare dso_local i32 @writel(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
